--- a/JavaApplication1/nbproject/project.properties
+++ b/JavaApplication1/nbproject/project.properties
@@ -36,14 +36,18 @@ dist.jlink.output=${dist.jlink.dir}/QuanLyHocVien
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=/home/tuan/Java_Thuvien/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=../Library/jcalendar-1.4.jar
 file.reference.mysql-connector-j-8.0.31.jar=/home/tuan/Java_Thuvien/mysql-connector-j_8.0.31-1ubuntu22.04_all/usr/share/java/mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-j-8.0.31.jar-1=../Library/mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-java-5.1.13.jar=/home/tuan/NetBeansJDKs/mysql-connector-java-5.1.13.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.13.jar}:\
     ${file.reference.mysql-connector-j-8.0.31.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
