--- a/JavaApplication1/nbproject/project.properties
+++ b/JavaApplication1/nbproject/project.properties
@@ -35,19 +35,41 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/QuanLyHocVien
 endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=/home/tuan/Java_Thuvien/jcalendar-1.4.jar
+file.reference.commons-codec-1.15.jar=../Library/excel/commons-codec-1.15.jar
+file.reference.commons-collections4-4.4.jar=../Library/excel/commons-collections4-4.4.jar
+file.reference.commons-compress-1.21.jar=../Library/excel/commons-compress-1.21.jar
+file.reference.commons-io-2.11.0.jar=../Library/excel/commons-io-2.11.0.jar
+file.reference.commons-math3-3.6.1.jar=../Library/excel/commons-math3-3.6.1.jar
 file.reference.jcalendar-1.4.jar-1=../Library/jcalendar-1.4.jar
-file.reference.mysql-connector-j-8.0.31.jar=/home/tuan/Java_Thuvien/mysql-connector-j_8.0.31-1ubuntu22.04_all/usr/share/java/mysql-connector-j-8.0.31.jar
+file.reference.log4j-api-2.18.0.jar=../Library/excel/log4j-api-2.18.0.jar
+file.reference.log4j-core-2.18.0.jar=../Library/excel/log4j-core-2.18.0.jar
 file.reference.mysql-connector-j-8.0.31.jar-1=../Library/mysql-connector-j-8.0.31.jar
-file.reference.mysql-connector-java-5.1.13.jar=/home/tuan/NetBeansJDKs/mysql-connector-java-5.1.13.jar
+file.reference.poi-5.2.3.jar=../Library/excel/poi-5.2.3.jar
+file.reference.poi-ooxml-5.2.3.jar=../Library/excel/poi-ooxml-5.2.3.jar
+file.reference.poi-ooxml-full-5.2.3.jar=../Library/excel/poi-ooxml-full-5.2.3.jar
+file.reference.poi-ooxml-lite-5.2.3.jar=../Library/excel/poi-ooxml-lite-5.2.3.jar
+file.reference.SparseBitSet-1.2.jar=../Library/excel/SparseBitSet-1.2.jar
+file.reference.xml-apis-1.4.01.jar=../Library/excel/xml-apis-1.4.01.jar
+file.reference.xmlbeans-5.1.1.jar=../Library/excel/xmlbeans-5.1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.13.jar}:\
-    ${file.reference.mysql-connector-j-8.0.31.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-j-8.0.31.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.21.jar}:\
+    ${file.reference.poi-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-5.2.3.jar}:\
+    ${file.reference.xmlbeans-5.1.1.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.log4j-api-2.18.0.jar}:\
+    ${file.reference.SparseBitSet-1.2.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.poi-ooxml-full-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-lite-5.2.3.jar}:\
+    ${file.reference.xml-apis-1.4.01.jar}:\
+    ${file.reference.log4j-core-2.18.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
