--- a/JavaApplication1/nbproject/project.properties
+++ b/JavaApplication1/nbproject/project.properties
@@ -41,6 +41,10 @@ file.reference.commons-compress-1.21.jar=../Library/excel/commons-compress-1.21.
 file.reference.commons-io-2.11.0.jar=../Library/excel/commons-io-2.11.0.jar
 file.reference.commons-math3-3.6.1.jar=../Library/excel/commons-math3-3.6.1.jar
 file.reference.jcalendar-1.4.jar-1=../Library/jcalendar-1.4.jar
+file.reference.jcommon-1.0.23.jar=../Library/graph/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-experimental.jar=../Library/graph/jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=../Library/graph/jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=../Library/graph/jfreechart-1.0.19.jar
 file.reference.log4j-api-2.18.0.jar=../Library/excel/log4j-api-2.18.0.jar
 file.reference.log4j-core-2.18.0.jar=../Library/excel/log4j-core-2.18.0.jar
 file.reference.mysql-connector-j-8.0.31.jar-1=../Library/mysql-connector-j-8.0.31.jar
@@ -69,7 +73,11 @@ javac.classpath=\
     ${file.reference.poi-ooxml-full-5.2.3.jar}:\
     ${file.reference.poi-ooxml-lite-5.2.3.jar}:\
     ${file.reference.xml-apis-1.4.01.jar}:\
-    ${file.reference.log4j-core-2.18.0.jar}
+    ${file.reference.log4j-core-2.18.0.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
