--- a/JavaApplication1/nbproject/project.properties
+++ b/JavaApplication1/nbproject/project.properties
@@ -40,6 +40,8 @@ file.reference.commons-collections4-4.4.jar=../Library/excel/commons-collections
 file.reference.commons-compress-1.21.jar=../Library/excel/commons-compress-1.21.jar
 file.reference.commons-io-2.11.0.jar=../Library/excel/commons-io-2.11.0.jar
 file.reference.commons-math3-3.6.1.jar=../Library/excel/commons-math3-3.6.1.jar
+file.reference.javax.activation-1.2.0.jar=../Library/javax.activation-1.2.0.jar
+file.reference.javax.mail-1.5.6.jar=../Library/javax.mail-1.5.6.jar
 file.reference.jcalendar-1.4.jar-1=../Library/jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=../Library/graph/jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19-experimental.jar=../Library/graph/jfreechart-1.0.19-experimental.jar
@@ -77,7 +79,9 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19-experimental.jar}:\
     ${file.reference.jfreechart-1.0.19-swt.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.javax.mail-1.5.6.jar}:\
+    ${file.reference.javax.activation-1.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
